--- a/main.css
+++ b/main.css
@@ -1,50 +1,66 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-html,body {
-    font-family: sans-serif;
+html,
+body {
+  font-family: sans-serif;
 }
 .center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) !important;
 }
 .frame {
-    border-radius: 10px;
-    width: 500px;
-    height: fit-content;
-    max-width: 90vw;
-    max-height: 100vh;
-    background: rgba(240, 240, 240, 1);
-    overflow: hidden;
+  border-radius: 10px;
+  width: 500px;
+  height: fit-content;
+  max-width: 90vw;
+  max-height: 100vh;
+  background: rgba(240, 240, 240, 1);
+  overflow: hidden;
 }
 .frame__head {
-    padding: 20px;
-    background: #00005C;
-    color: #ffffff;
+  padding: 20px;
+  background: #00005c;
+  color: #ffffff;
 }
 
-
 .frame__foot {
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: #C060A1;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #c060a1;
 }
 
 .item {
-    display: block;
-    width: 100%;
-    height: 100px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    background: rgb(100, 100, 255);
+  display: block;
+  width: 100%;
+  height: 100px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgb(100, 100, 255);
 }
-.frame__main .row, .col {
-    padding: 0;
+.frame__main .row,
+.col {
+  padding: 0;
 }
 
 .modal-header {
-    background-color: rgb(255, 100, 30);
-    color: white;
+  background-color: rgb(255, 100, 30);
+  color: white;
+}
+#reset-btn {
+  width: 100%;
+  height: 100%;
+}
+
+#reset-btn .material-symbols-outlined {
+  font-size: 2.5rem !important;
+  color: #ffffff !important;
+}
+
+@media only screen and (max-width: 500px) {
+  #reset-btn .material-symbols-outlined {
+    font-size: 2rem !important;
+  }
 }
